--- a/assets/style.css
+++ b/assets/style.css
@@ -6,53 +6,72 @@
     --primary-gradient-horizontal: linear-gradient(to right, var(--primary-color-1), var(--primary-color-2));
     --primary-gradient-radial: radial-gradient(circle, var(--primary-color-1), var(--primary-color-2));
     --light-elements-color: #dfdfdf;
+    --page-margin-top: 2cm;
+    --page-margin-left: 2cm;
+    --page-margin-right: 2cm;
+    --page-margin-bottom: 1cm;
+    --h1-top-margin: 10cm;
+    --title-font-weight: 400;
+    --page-height: 297mm;
+    --page-width: 210mm;
+    --page-bleed: 1mm;
+    box-sizing: border-box !important;
 }
 
 html {
-    font-size: 24px !important;
+    font-size: 15px !important;
+    line-height: 1.5 !important;
     font-family: Roboto, "Libre Franklin", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    height: 100%;
+    width: 100%;
+    padding: 0 !important;
 }
 
 body {
     color: #111;
-    margin: 0;
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    padding: 0 !important;
+    margin-top: 0 !important;
+    font-weight: var(--title-font-weight) !important;
+    break-after: avoid !important;
+    break-inside: avoid !important;
+    page-break-after: avoid !important;
+    page-break-inside: avoid !important;
 }
 
 h1 {
+    font-size: 2.5rem !important;
+    margin-bottom: 5rem !important;
+    margin-top: var(--h1-top-margin) !important;
+}
+
+h2 {
+    margin-top: 2rem !important;
     font-size: 2rem !important;
-    font-weight: 500 !important;
-    margin-top: 15cm;
-}
-
-h2 {
-    font-size: 1.5rem !important;
-    font-weight: 200;
-    margin-top: 1rem !important;
-}
-
-/* Trigger a new page for all h2 elements */
-h2 {
+    margin-bottom: 3rem !important;
     page-break-before: always;
-}
 
-/* Prevent page break if an h1 exists immediately before the h2 */
-h1+h2 {
-    page-break-before: auto;
-    margin-top: 0;
 }
 
 h3 {
-    color: var(--primary-color-1);
-    font-size: 1.75rem;
+    font-size: 1.5rem;
+    margin-bottom: 1rem !important;
 }
 
 h4 {
-    color: var(--primary-color-1);
     font-size: 1.25rem;
 }
 
 h5 {
-    color: var(--primary-color-1);
     font-size: 1rem;
 }
 
@@ -142,6 +161,12 @@ table tr:nth-child(2n) {
 a {
     color: var(--primary-color-1);
     text-decoration: none;
+    word-wrap: break-word;
+    /* For older browsers */
+    overflow-wrap: break-word;
+    /* Modern browsers */
+    word-break: break-all;
+    /* Break words if necessary */
 }
 
 ul,
