--- a/assets/title-page.css
+++ b/assets/title-page.css
@@ -1,22 +1,34 @@
 /* importing the main content CSS file for the CRA inventory items */
 @import url("./assets/style.css");
 
+@page {
+    size: calc(var(--page-width) + 2 * var(--page-bleed)) calc(var(--page-height) + 2 * var(--page-bleed)) !important;
+    margin: 0 !important;
+}
+
 html {
-    color: white;
-    background: radial-gradient(circle at top left, var(--primary-color-1), var(--primary-color-2));
-    background-size: cover;
-    /* Ensures the gradient covers the entire page */
-    background-repeat: no-repeat;
+    padding: var(--page-margin-top) var(--page-margin-left) var(--page-margin-top) var(--page-margin-left) !important;
     height: 100%;
     width: 100%;
+    position: relative;
 }
 
 body {
-    color: white;
-    margin: 1cm 2cm;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+    background: radial-gradient(circle at top left, var(--primary-color-1), var(--primary-color-2));
+    background-repeat: repeat;
+    background-size: cover;
+    /* Stretch to cover the entire page */
 }
 
-/* Setting page margins for printing */
-@page {
-    margin: 0
+
+h1 {
+    color: white !important;
+}
+
+h2 {
+    display: none;
 }
